# enl

./: .dockerignore  .envrc  Cargo.toml  Dockerfile
configuration/: base.yaml
migrations/: 20230723033846_create_subscriptions_table.sql  20230730064022_make_status_not_null_in_subscriptions.sql  20230730064515_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscriptions.rs  subscriptionsc_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helper.rs  subscription.rs  subscription_confirm.rs
