[package]
name = "enl"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "enl"

[dependencies]
actix-web = "4.3.1"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.174", features = ["derive"] }
serde_urlencoded = "0.7.1"
rand = { version = "0.8.5" }
config = { version = "0.13.3" }
chrono = { version = "0.4.26", features = ["clock"] }



[dependencies.uuid]
version = "1.4.1"
features = ["v4", "serde"]

[dependencies.tokio]
version = "1.29.1"
features = ["macros", "rt-multi-thread"]

[dependencies.sqlx]
version = "0.6"
default_features = false
features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]

