[package]
name = "enl"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "enl"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.174", features = ["derive"] }
serde_urlencoded = "0.7.1"
rand = { version = "0.8", features=["std_rng"] }
config = { version = "0.13.3" }
chrono = { version = "0.4.26", features = ["clock"] }
log = { version = "0.4.19" }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "registry"] }
tracing-bunyan-formatter = { version = "0.3.8" }
tracing-log = { version = "0.1.3" }
tracing-actix-web = "0.7.5"
once_cell = "1.18.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde-aux = { version = "4.2.0" }
unicode-segmentation = { version = "1" }
validator = { version = "0.16.1" }
reqwest = { version = "0.11.18", features = ["json" , "rustls-tls"] }
thiserror = { version = "1.0.44" }
anyhow = { version = "1.0.72" }

[dependencies.uuid]
version = "1.4.1"
features = ["v4", "serde"]

[dependencies.tokio]
version = "1.29.1"
features = ["macros", "rt-multi-thread"]

[dependencies.sqlx]
version = "0.6"
default_features = false
features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"]

[dev-dependencies]
claims = { version = "0.7.0" }
fake = { version = "2.6.1" }
quickcheck = { version = "1.0.3" }
tokio = { version = "1.29.1", features = ["rt", "macros"] }
wiremock = { version = "0.5.19" }
serde_json = "1.0.104"
linkify = "0.10.0"
